@@ -1,55 +1,63 @@
 //
-// C++ Interface: katlastilecreatordialog
+// C++ Interface: placemarkinfodialog
 //
-// Description: KAtlasTileCreatorDialog 
+// Description: PlaceMarkInfoDialog 
 
-// The KAtlasTileCreatorDialog displays the progress of the tile creation.
+// The PlaceMarkInfoDialog... (FIXME)
 //
 // Author: Torsten Rahn <tackat@kde.org>, (C) 2006
 //
 // Copyright: See COPYING file that comes with this distribution
 
+
 #ifndef PLACEMARKINFODIALOG_H
 #define PLACEMARKINFODIALOG_H
 
-#include "ui_placemarkinfodialog.h"
 
-#include "katlasflag.h"
+#include "ui_placemarkinfodialog.h"
 
 #include <QtGui/QStatusBar>
 #include <QtCore/QUrl>
+
+#include "katlasflag.h"
+
+
 /**
 @author Torsten Rahn
 */
 
+
 class PlaceMark;
 
-class PlaceMarkInfoDialog : public QDialog, private Ui::PlaceMarkInfoDialog {
+class PlaceMarkInfoDialog : public QDialog, private Ui::PlaceMarkInfoDialog
+{
 
-Q_OBJECT
+    Q_OBJECT
 
-public:
-	PlaceMarkInfoDialog( PlaceMark*, QWidget *parent = 0 );
+ public:
+    PlaceMarkInfoDialog( PlaceMark*, QWidget *parent = 0 );
 
-signals:
+ signals:
+    void source( QUrl );
 
-	void source( QUrl );
+ public slots:
+    void setFlagLabel();
+    void showMessage( QString text )
+    {
+        QFont  statusFont = QStatusBar().font();
+        statusFont.setPointSize( qRound( 0.9 * statusFont.pointSize() ) );
+        m_pStatusLabel->setFont( statusFont );
+        m_pStatusLabel->setText( text );
+    }
 
-public slots:
-	void setFlagLabel();
-	void showMessage( QString text ){
-		QFont statusFont = QStatusBar().font();
-		statusFont.setPointSize( qRound( 0.9 * statusFont.pointSize() ) );
-		m_pStatusLabel->setFont( statusFont );
-		m_pStatusLabel->setText( text );
-	}
+ protected:
+    void showContent();
+    void requestFlag( const QString& );
 
-protected:
-	KAtlasFlag* m_flagcreator;
-	PlaceMark* m_mark;
-	void showContent();
-	void requestFlag( const QString& );
-//	QStatusBar * m_pStatusBar;
+ protected:
+    KAtlasFlag  *m_flagcreator;
+    PlaceMark   *m_mark;
 };
+
 
 #endif // PLACEMARKINFODIALOG_H
