@@ -1,4 +1,5 @@
 29.04.07 - ingwa
+	Cleaned placemarkinfodialog.{h,cpp}
 	Cleaned maptheme.{h,cpp}
 
 26.04.07 - ingwa
